# tiledwebmaps

./: CHANGELOG.md  CMakeLists.txt  README.md  changelog.md  readme.md
cmake/: tiledwebmapsConfig.cmake
include/tiledwebmaps/: affine.h  bin.h  cache.h  disk.h  geo.h  http.h  layout.h  lru.h  proj.h  python.h  tiledwebmaps.h  tileloader.h
include/tiledwebmaps/affine/: named_axes.h  rigid.h  rotation.h  scaled_rigid.h
python/: CMakeLists.txt  copy_proj_data.py  setup.py
python/backend/: CMakeLists.txt  main.cpp
python/build_wheel/: build_all.sh  build_in_docker.sh
python/scripts/: download_massgis.py  download_nconemap.py  download_openbb.py  download_opendc.py  download_opennrw.py  download_opensaxony.py  to_bin.py
python/test/: test_tiledwebmaps.py
python/tiledwebmaps/: __init__.py  config.py  geo.py  presets.py  util.py
test/: CMakeLists.txt  tiledwebmaps.cpp
